[GStreamer][WebRTC] Incoming track handling fixes https://bugs.webkit.org/show_bug.cgi?id=270225

Reviewed by Xabier Rodriguez-Calvar.

The IncomingTrackProcessors are now created upfront, based on the transceivers. Creating them within
the pad-added signal handler was too late, potentially leading to issues where  the track events
might be emitted too early, for an incoming MediaStream containing a video and audio track, when the
audio RTP stream is slightly delayed the video track event would be fired too early, leading to
unexpected behaviour on JS side.

We also now relay latency queries from the webkitmediastreamsrc to the WebRTC pipeline, fixing audio
loss issues in case the audio track is delayed compared to the video track.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.cpp:
(WebCore::GStreamerMediaEndpoint::getStats):
(WebCore::GStreamerMediaEndpoint::connectIncomingTrack):
(WebCore::GStreamerMediaEndpoint::connectPad):
(WebCore::GStreamerMediaEndpoint::collectTransceivers):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerMediaEndpoint.h:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.cpp:
(WebCore::GStreamerPeerConnectionBackend::doStop):
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerPeerConnectionBackend.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp:
(WebCore::GStreamerIncomingTrackProcessor::GStreamerIncomingTrackProcessor):
(WebCore::GStreamerIncomingTrackProcessor::configure):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.h:
(WebCore::GStreamerIncomingTrackProcessor::create):
(WebCore::GStreamerIncomingTrackProcessor::bin const):
* Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

Canonical link: https://commits.webkit.org/275483@main