Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.h
@@ -30,14 +30,16 @@ class GStreamerIncomingTrackProcessor : public RefCounted<GStreamerIncomingTrack
     WTF_MAKE_FAST_ALLOCATED;
 
 public:
-    static Ref<GStreamerIncomingTrackProcessor> create(ThreadSafeWeakPtr<GStreamerMediaEndpoint>&& endPoint, GRefPtr<GstPad>&& pad)
+    static Ref<GStreamerIncomingTrackProcessor> create()
     {
-        return adoptRef(*new GStreamerIncomingTrackProcessor(WTFMove(endPoint), WTFMove(pad)));
+        return adoptRef(*new GStreamerIncomingTrackProcessor());
     }
     ~GStreamerIncomingTrackProcessor() = default;
 
-    GstElement* bin() const { return m_bin.get(); }
+    void configure(ThreadSafeWeakPtr<GStreamerMediaEndpoint>&&, GRefPtr<GstPad>&&);
     GstPad* pad() const { return m_pad.get(); }
+
+    GstElement* bin() const { return m_bin.get(); }
 
     const GstStructure* stats();
 
@@ -46,7 +48,7 @@ public:
     const String& trackId() const { return m_data.trackId; }
 
 private:
-    GStreamerIncomingTrackProcessor(ThreadSafeWeakPtr<GStreamerMediaEndpoint>&&, GRefPtr<GstPad>&&);
+    GStreamerIncomingTrackProcessor();
 
     void retrieveMediaStreamAndTrackIdFromSDP();
     String mediaStreamIdFromPad();
